	modified:   ZGame/AI/ZChess/Src/Chess/NegamaxEngine.h
	modified:   ZGame/AI/ZChess/Src/Chess/NewGame.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/NewGame.h
	modified:   ZGame/AI/ZChess/Src/Chess/PVS_Engine.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/PVS_Engine.h
	modified:   ZGame/AI/ZChess/Src/Chess/SearchEngine.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/SearchEngine.h
	modified:   ZGame/AI/ZChess/Src/Chess/TranspositionTable.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/TranspositionTable.h
	modified:   ZGame/AI/ZChess/Src/Chess/chess.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/chess.h
	modified:   ZGame/AI/ZChess/Src/Chess/chessDlg.cpp
	modified:   ZGame/AI/ZChess/Src/Chess/chessDlg.h
	modified:   ZGame/AI/ZChess/Src/Chess/define.h
	modified:   ZGame/AI/ZChess/Src/Chess/negascout.h
	modified:   ZGame/AI/ZChess/Src/Chess/resource.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Define.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Eveluation.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/Eveluation.h
	modified:   ZGame/AI/ZChess/Src/GoBang/HistoryHeuristic.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/HistoryHeuristic.h
	modified:   ZGame/AI/ZChess/Src/GoBang/MoveGenerator.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/MoveGenerator.h
	modified:   ZGame/AI/ZChess/Src/GoBang/NegaScout_TT_HH.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/NegaScout_TT_HH.h
	modified:   ZGame/AI/ZChess/Src/GoBang/NewGameDlg.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/NewGameDlg.h
	modified:   ZGame/AI/ZChess/Src/GoBang/Renju.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/Renju.h
	modified:   ZGame/AI/ZChess/Src/GoBang/RenjuDlg.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/RenjuDlg.h
	modified:   ZGame/AI/ZChess/Src/GoBang/SearchEngine.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/SearchEngine.h
	modified:   ZGame/AI/ZChess/Src/GoBang/TranspositionTable.cpp
	modified:   ZGame/AI/ZChess/Src/GoBang/TranspositionTable.h
	modified:   ZGame/AI/ZChess/Src/GoBang/resource.h
