@@ -85,7 +85,7 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-06-30 13:49:07 L.184'36653 T4135433783.K ~423 +----+----+----+----+----+
+     Zndex_E : //z 2015-07-01 16:09:10 L.183'28250 T2692187503.K ~424 +----+----+----+----+----+
      TimeCnt : //z 2015-06-24 12:53:49 L.190'39971 T878696314 .K ~16  +----+----+----+----+----+
      Reg.Cnt : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20  +----+----+----+----+----+
      #20  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20    V+.407  L+.439  
@@ -110,7 +110,7 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-06-30 13:49:07 L.184'36653 T4135433783.K ~443   R+.19   L+.459  --+----+
+     Version : //z 2015-07-01 16:09:10 L.183'28250 T2692187503.K ~444   R+.19   L+.472  --+----+
      #23  V+ : //z 2015-06-24 14:58:36 L.190'32484 T3461811901.K ~437   R+.19   L+.466  
      #22  V+ : //z 2015-06-24 13:11:19 L.190'38921 T2165348626.K ~418   R+.19   L+.445  
      #21  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~407   R+.20   L+.440  V+.407  
@@ -469,8 +469,6 @@ PC游戏编程（人机博弈）
 
 代码之殇
 近2年来读到的最好的最贴近技术的非技术类书籍。 每一个章节，都找到了自己和身边的团队，项目的影子。直到现在，阅读《人月神话》的时候，都会仰视那些高瞻远瞩的观点，但是不知其所从来，但是这本书可以说是一个桥梁，真正的展开了你身边的问题，你曾经有过但是没有仔细考虑的疑惑，让人明白了，为什么人月是一个神话。 里面的观点比较明确，不一定要同意，但是最重要的是让你思考。 
-
-
 #endregion //z 2015-06-09 11:00:48 L.205'46752 BG57IV3@XCL T4035241523.K.F4146951713-+----+----+
 
 #region 06-24 13:07 R#.20   @书评
