@@ -270,3 +270,14 @@ Changes to be committed:
 	modified:   ZGame/AI/ZChess/Src/GoBang/TranspositionTable.h
 	modified:   ZGame/AI/ZChess/Src/GoBang/resource.h
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/07/01.16_41_07.97.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
